// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Menu show={false} /> 1`] = `
"<section class=\\"menu\\">
  <div class=\\"menu-backdrop\\">
    <div class=\\"menu-box\\"><button type=\\"button\\" class=\\"menu-item\\" tabindex=\\"-1\\">
        <p>foo</p><svg>icon</svg>
      </button><button type=\\"button\\" class=\\"menu-item\\" tabindex=\\"-1\\">
        <p>bar</p>
        <p>icon</p>
      </button></div>
  </div>
</section>"
`;

exports[`<Menu show={true} /> 1`] = `
"<section class=\\"menu show\\">
  <div class=\\"menu-backdrop\\">
    <div class=\\"menu-box\\"><button type=\\"button\\" class=\\"menu-item\\" tabindex=\\"0\\">
        <p>foo</p><svg>icon</svg>
      </button><button type=\\"button\\" class=\\"menu-item\\" tabindex=\\"0\\">
        <p>bar</p>
        <p>icon</p>
      </button></div>
  </div>
</section>"
`;
